[project]
name = "money-utils"
version = "0.1.0"
description = ""
authors = [
  "Soeren Wegener <wegener92@gmail.com>",
  "Jonas Thelemann <e-mail@jonas-thelemann.de>",
  "Claus F. Strasburger <1156864+cfstras@users.noreply.github.com>"
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asgiref==3.9.1",
  "bleach==3.3.1",
  "blinker==1.9.0",
  "bokeh>=3,<4",
  "certifi==2024.12.14",
  "chardet==3.0.4",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "contourpy==1.3.2",
  "cython==3.1.2",
  "django>=3,<4",
  "django-common-helpers==0.9.2",
  "django-cron==0.6.0",
  "django-request-logging==0.7.5",
  "django-uwsgi==0.2.2",
  "elementpath==1.4.6",
  "fints==4.2.4",
  "flask==2.3.3",
  "flask-compress==1.18",
  "fuzzywuzzy==0.18.0",
  "idna==3.10",
  "importlib-metadata==7.2.1",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "markupsafe==2.1.5",
  "mt-940==4.30.0",
  "packaging==19.2",
  "pandas==2.3.1",
  "pillow==10.4.0",
  "pyparsing==2.4.7",
  "python-dateutil==2.9.0.post0",
  "python-levenshtein==0.27.1",
  "pytz==2024.2",
  "pyyaml==6.0.2",
  "requests==2.32.4",
  "sepaxml==2.6.2",
  "six==1.17.0",
  "sqlalchemy==1.4.54",
  "sqlparse==0.5.3",
  "text-unidecode==1.3",
  "tornado==6.5.1",
  "typing-extensions==4.14.1",
  "tzdata==2024.2",
  "uwsgi==2.0.30",
  "webencodings==0.5.1",
  "werkzeug==3.1.3",
  "xmlschema==1.11.3",
  "xyzservices==2023.10.1",
  "zipp==3.23.0"
]
