[project]
name = "money-utils"
version = "0.1.0"
description = ""
authors = [
  "Soeren Wegener <wegener92@gmail.com>",
  "Jonas Thelemann <e-mail@jonas-thelemann.de>",
  "Claus F. Strasburger <1156864+cfstras@users.noreply.github.com>"
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bokeh>=3,<4",
  "django>=3,<4",
  "fints==4.2.3",
  "fuzzywuzzy==0.17.0",
  "pandas==2.3.1",
  "sqlalchemy==1.3.0"
]
